# C-PAC_regression_dashboard

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  build_d3_dashboard.py  build_dashboard.py  calculate_correlations.py  correlations_dct.txt  create_yml.py  html_script.py  index.html  pyproject.toml  requirements.txt
scripts/: heatmap.js
src/cpac_regression_dashboard/: __init__.py  _version.py  build_dashboard.py  calculate_correlations.py  create_yml.py  generate_comment.py
src/cpac_regression_dashboard/templates/: heatmap.js
src/cpac_regression_dashboard/utils/: html_script.py  parse_yaml.py
src/regression_dashboard/: build_d3_dashboard.py  build_dashboard.py  generate_comment.py
src/regression_dashboard/templates/: heatmap.html
style/: heatmap.css
templates/: heatmap.html  heatmap.js
utils/: html_script.py  parse_yaml.py
